--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -8,14 +10,37 @@ Flask==3.1.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.55
+langgraph==0.3.31
+langgraph-checkpoint==2.0.24
+langgraph-prebuilt==0.1.8
+langgraph-sdk==0.1.63
+langsmith==0.3.33
 Mako==1.3.9
 MarkupSafe==3.0.2
+orjson==3.10.16
+ormsgpack==1.9.1
+packaging==24.2
+pydantic==2.11.3
+pydantic_core==2.33.1
 python-dotenv==1.1.0
+PyYAML==6.0.2
 requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
 SQLAlchemy==2.0.40
+tenacity==9.1.2
+typing-inspection==0.4.0
 typing_extensions==4.13.1
 urllib3==2.4.0
 Werkzeug==3.1.3
+xxhash==3.5.0
+zstandard==0.23.0
