--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,26 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+distro==1.9.0
+filelock==3.18.0
 Flask==3.1.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+fsspec==2025.3.2
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain==0.3.24
 langchain-core==0.3.55
+langchain-text-splitters==0.3.8
 langgraph==0.3.31
 langgraph-checkpoint==2.0.24
 langgraph-prebuilt==0.1.8
@@ -26,6 +33,7 @@ langgraph-sdk==0.1.63
 langsmith==0.3.33
 Mako==1.3.9
 MarkupSafe==3.0.2
+openai==1.75.0
 orjson==3.10.16
 ormsgpack==1.9.1
 packaging==24.2
@@ -38,6 +46,7 @@ requests-toolbelt==1.0.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 tenacity==9.1.2
+tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 urllib3==2.4.0
