--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.24
+langchain-community
 langchain-core==0.3.55
 langchain-text-splitters==0.3.8
 langgraph==0.3.31
