--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ TOKEN_WEBHOOK_WHATSAPP =TOKEN_OIOT
 #PHONE_NUMBER_ID = os.getenv('641730352352096')
 #TOKEN_WEBHOOK_WHATSAPP = os.getenv('TOKEN_OIOT')
 
-HF_API_TOKEN=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
+HF_API_TOKEN=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 #HUGGINGFACE_API_TOKEN
