--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,6 @@ xxhash==3.5.0
 yarl==1.20.0
 zstandard==0.23.0
 trustcall==0.0.26 
+# Agregar estas dependencias si no están
+python-telegram-bot==20.5
+flask-socketio==5.3.6
