--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
 python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
