--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=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
 LANGCHAIN_PROJECT=pythonIntegration
+
+GROQ_API_KEY=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
