--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-SQLAlchemy==3.1.1
 frozenlist==1.6.0
 fsspec==2025.3.2
 greenlet==3.1.1
+groq==0.24.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
@@ -33,6 +34,7 @@ jsonpointer==3.0.0
 langchain==0.3.24
 langchain-community==0.3.22
 langchain-core==0.3.55
+langchain-groq==0.3.2
 langchain-openai==0.3.14
 langchain-text-splitters==0.3.8
 langgraph==0.3.31
