--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.6.0
 fsspec==2025.3.2
+fuzzywuzzy==0.18.0
 greenlet==3.1.1
 groq==0.24.0
 h11==0.14.0
@@ -42,6 +43,7 @@ langgraph-checkpoint==2.0.24
 langgraph-prebuilt==0.1.8
 langgraph-sdk==0.1.63
 langsmith==0.3.33
+Levenshtein==0.27.1
 Mako==1.3.9
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -57,6 +59,7 @@ pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
 python-dotenv==1.1.0
+python-Levenshtein==0.27.1
 pytz==2025.2
 PyYAML==6.0.2
 RapidFuzz==3.13.0
